--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ import '../styles/global.css';
           });
         })();
       </script>
-        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "", image: '', type: "website", themeColor: "#ffffff"}} />
+        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "https://domain-1735908557731.netlify.app/", image: 'https://domain-1735908557731.netlify.app', type: "website", themeColor: "#ffffff"}} />
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
